added a copy files step

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -19,6 +19,11 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: 'deployment'
+    Contents: '*.json'
+    TargetFolder: '$(build.artifactstagingdirectory)/Templates'
 - task: DownloadPipelineArtifact@2
   inputs:
     buildType: 'specific'
